--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,9 +19,10 @@ html, body {
 }
 
 h1, h2, h3 {
+	text-align:center;
 	margin: 0;
 	padding: 0;
-	text-transform: uppercase;
+	text-transform: none;
 	font-weight: 300;
 	color: #7D7764;
 }
@@ -590,7 +591,7 @@ body {
 .login-form {
     margin-left: 30%;
     margin-right: 30%;
-    margin-top: 10%;
+    margin-top: 5%;
     margin-bottom: 2%;
     background-color: white;
     padding: 2%;
