--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,7 +103,7 @@ body {
 
 #logo {
 	overflow: hidden;
-	height: 250px;
+	height: 200px;
 }
 
 #logo h1, #logo p {
@@ -630,3 +630,9 @@ label.star:before {
     content: '\f006';
     font-family: FontAwesome;
 }
+
+.ui-rater>span {vertical-align:top;}
+.ui-rater-rating {margin-left:.8em}
+.ui-rater-starsOff, .ui-rater-starsOn {display:inline-block; height:18px; background:url(stars.png) repeat-x 0 0px;}
+.ui-rater-starsOn {display:block; max-width:90px; top:0; background-position: 0 -36px;}
+.ui-rater-starsHover {background-position: 0 -18px!important;}
