--- a/public/css/style.css
+++ b/public/css/style.css
@@ -644,8 +644,9 @@ label.star:before {
 
 
 #page-bgbtm {
-    margin: 0px;
-    padding: 40px 40px 0px 40px;
+    margin: 50px 50px 0px 40px;
+    /* background-color: white; */
+    border-radius: 5%;
 }
 
 /* Content */
@@ -658,14 +659,18 @@ label.star:before {
 
 .post-profile {
     clear: both;
-    padding: 30px 0px;
     border-bottom: #FFA800;
+    padding: 3%;
+    background-color: white;
+    margin-right: 5%;
+    border-radius: 5%;
+    margin-bottom: 5%;
 }
 
 .post-profile .title {
     padding-top: 10px;
     letter-spacing: -2px;
-    text-align: left;
+    text-align: center;
 }
 
 .post-profile .title a {
@@ -677,7 +682,6 @@ label.star:before {
     display: inline-block;
     padding: 5px 10px;
     background: #000000;
-    text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 11px;
     font-style: italic;
@@ -698,6 +702,12 @@ label.star:before {
 {
     margin-bottom: 2em;
     border-radius: 10px;
+    object-fit: contain;
+    object-position: center;
+    width: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .links {
@@ -715,8 +725,10 @@ label.star:before {
 
 #sidebar-profile {
     float: right;
-    width: 400px;
-    padding: 30px 0px 0px 0px;
+    width: 450px;
+    padding: 40px 40px 40px 40px;
+    background-color: white;
+    border-radius: 5%;
 }
 
 #sidebar-profile ul {
@@ -758,6 +770,7 @@ label.star:before {
     font-size: 24px;
     padding-bottom: 35px;
     color: #484848;
+    margin-top: 0;
 }
 
 #sidebar-profile p {
@@ -768,9 +781,36 @@ label.star:before {
 
 #sidebar-profile a {
     border: none;
-    color: #737373;
 }
 
 #sidebar-profile a:hover {
     text-decoration: underline;
+}
+
+.table-profile {
+    border-collapse: separate;
+    border-spacing: 20px;
+    line-height: 150%;
+}
+
+.table-profile td,th {
+    vertical-align: top;
+}
+
+li #rating {
+    text-align: center;
+    
+}
+
+#sidebar-profile img {
+    width: 100%;
+    
+    height: 100%;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.meta-information {
+    display: block;
+    text-align: center;
 }
