--- a/public/css/style.css
+++ b/public/css/style.css
@@ -945,3 +945,65 @@ li #rating {
     background-color: white;
     border-radius: 20px;
 }
+
+.email_content {
+    /* border-style: solid; */
+    background-color: white;
+    border-radius: 10px;
+}
+
+.leftside_menubar {
+    /* border-style: solid; */
+    background-color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 10px;
+}
+
+.email_section {
+    margin-top: 50px;
+    /* background-color: white; */
+    width: 79%;
+}
+
+.message_menu {
+    margin-bottom: -10px;
+    padding-left: 0px;
+    list-style-type: none;
+    display: block;
+    text-align: left;
+}
+
+.email-background {
+    background-color: white;
+}
+
+.message_menu li {
+    margin-bottom: 10px;
+}
+
+.message_menu a {
+    color: black;
+}
+
+.message {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.message p {
+    margin-bottom: 0px;
+
+}
+
+.selected {
+    font-weight: bolder;
+}
+
+.selected a {
+    color: royalblue;
+}
+
+.unread p{
+    font-weight: bold;
+}
