remember me feature.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -804,8 +804,9 @@ li #rating {
 
 #sidebar-profile img {
     width: 100%;
-    
     height: 100%;
+    object-fit: contain;
+    object-position: center;
     padding-left: 50px;
     padding-right: 50px;
 }
