--- a/public/css/style.css
+++ b/public/css/style.css
@@ -869,7 +869,7 @@ li #rating {
 .user-review {
     padding-left: 10px;
     padding-right: 10px;
-    text-align: left;
+    text-align: justify;
 }
 
 .review-wrapper {
@@ -1056,4 +1056,33 @@ li #rating {
     background-color: #ffffff;
     border-radius: 20px;
     padding-top: 2%;
+}
+
+.rating {
+    overflow: hidden;
+    display: inline-block;
+    font-size: 0;
+    position: relative;
+}
+.rating-input {
+    float: right;
+    width: 3px;
+    height: 16px;
+    padding: 0;
+    margin: 0 0 0 -16px;
+    opacity: 0;
+}
+.rating:hover .rating-star:hover,
+.rating:hover .rating-star:hover ~ .rating-star,
+.rating-input:checked ~ .rating-star {
+    background-position: 0 0;
+}
+.rating-star,
+.rating:hover .rating-star {
+    position: relative;
+    float: right;
+    display: block;
+    width: 16px;
+    height: 16px;
+    background: url('http://kubyshkin.ru/samples/star-rating/star.png') 0 -16px;
 }
